--- a/app/assets/stylesheets/_venue.scss
+++ b/app/assets/stylesheets/_venue.scss
@@ -18,7 +18,7 @@ section#devices {
         font-weight: 500;
     }
     .naming-advice {
-        background:$vr-purple;
+        background: $vr-purple;
         padding: 24px 24px 24px 12px;
         color: white;
         margin-bottom: 24px;
@@ -61,7 +61,7 @@ section#devices {
             float: left;
         }
         input[type="submit"] {
-            max-width:120px;
+            max-width: 120px;
             margin: 0 auto;
             margin-bottom: 24px;
             padding: 24px;
@@ -86,7 +86,7 @@ section#devices {
     }
     .help {
         padding: 24px;
-        background:$vr-beige;
+        background: $vr-beige;
         color: $tuatara;
         // border:1px solid $vr-purple;
         .instruction {
@@ -172,10 +172,12 @@ section#devices {
     }
 }
 
-.venues, .talks{
-
+.venues, .talks {
+    html & {
+        overflow: auto;
+    }
     section {
-        padding-top:48px;
+        padding-top: 48px;
     }
     #help-text-trigger {
         // color: $vr-purple;
@@ -192,19 +194,19 @@ section#devices {
         }
     }
     .optional-help-text div {
-        background:$vr-beige;
+        background: $vr-beige;
         padding: 24px;
         text-align: left;
         .strong {
-            font-weight: 700
+            font-weight: 700;
         }
         svg {
             width: 24px;
             height: 24px;
-            fill:currentColor
+            fill: currentColor;
         }
         .close-button {
-            position:relative
+            position: relative;
         }
     }
     background: $talk-dark;
@@ -293,7 +295,7 @@ section#devices {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgba(0,0,0,.8);
+    background: rgba(0, 0, 0, 0.8);
 }
 
 .modal-background {
@@ -711,8 +713,6 @@ nav.top-bar {
     border-color: $vr-beige transparent transparent transparent;
 }
 
-
-
 .venues .selectize-input {
     margin: 0;
     padding: 9px 12px 12px 12px;
@@ -732,8 +732,8 @@ nav.top-bar {
     background-repeat: no-repeat;
     height: 36px;
     font-size: .8rem;
-    border-bottom: 1px solid rgba($oil, .4);
-    box-shadow:0 1px 5px rgba(black,.5);
+    border-bottom: 1px solid rgba($oil, 0.4);
+    box-shadow: 0 1px 5px rgba(black, 0.5);
     input {
         visibility: hidden;
     }
@@ -765,35 +765,31 @@ nav.top-bar {
 
 #venue-control-panel {
     color: $silver;
-        margin-bottom: 12px;
-        padding: 0;
-     
-
+    margin-bottom: 12px;
+    padding: 0;
     .venue-panel {
         width: 100%;
-        padding:0;
-        float:left;
+        padding: 0;
+        float: left;
         border-radius: 4px;
         margin-bottom: 12px;
-        @include breakpoint(1000px){
-        border-right: 6px solid $talk-dark;
-        border-left: 6px solid $talk-dark;
-        width: grid-column(4 of 12);
-        // &:last-child {
-        //     border-right:none;
-        // }
-
+        @include breakpoint(1000px) {
+            border-right: 6px solid $talk-dark;
+            border-left: 6px solid $talk-dark;
+            width: grid-column(4 of 12);
+            // &:last-child {
+            //     border-right:none;
+            // }
         }
     }
     .message {
-        padding:12px;
-        border-bottom-left-radius:4px;
-        border-bottom-right-radius:4px;
+        padding: 12px;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
         background: $topbar-dark;
-         border:2px solid $panelOutlineColor;
-        border-top:none;
+        border: 2px solid $panelOutlineColor;
+        border-top: none;
         padding-bottom: 12px;
-        
         p {
             font-size: rem-calc(12);
             color: $silver;
@@ -802,20 +798,20 @@ nav.top-bar {
     .titlebar {
         padding: 12px;
         //max-height: 46px;
-        border-top-right-radius:4px;
-        border-top-left-radius:4px;
-        background:$topbar-dark;
-        border:2px solid $panelOutlineColor;
-        border-bottom:1px solid rgba($panelOutlineColor,.4);
+        border-top-right-radius: 4px;
+        border-top-left-radius: 4px;
+        background: $topbar-dark;
+        border: 2px solid $panelOutlineColor;
+        border-bottom: 1px solid rgba($panelOutlineColor, 0.4);
         h4 {
             font-size: rem-calc(18);
             margin: 0;
-
             font-family: $body-font-family;
             font-weight: 500;
             color: $panelOutlineColor;
             //text-transform: uppercase;
             //letter-spacing: rem-calc(.5)
+       
         }
         .neutral {
             background: currentColor;
@@ -839,9 +835,7 @@ nav.top-bar {
         font-size: .8rem;
         border-right: 2px solid $panelOutlineColor;
         border-left: 2px solid $panelOutlineColor;
-                border-bottom:1px solid rgba($panelOutlineColor,.4);
-
-
+        border-bottom: 1px solid rgba($panelOutlineColor, 0.4);
         .holder {
             padding: 0;
         }
@@ -949,7 +943,6 @@ nav.top-bar {
 #venue-control-panel .device-panel .status-bar {
     padding: 0;
 }
-
 
 .stopped {
     background: $alert-color;
@@ -1303,17 +1296,17 @@ nav.top-bar {
             }
         }
     }
-        .help {
-            background:$vr-beige;
-            text-align: left;
-            padding:12px;
-            font-size: 14px;
-            svg {
-                width: 24px;
-                height: 24px;
-                fill:currentColor;
-            }
+    .help {
+        background: $vr-beige;
+        text-align: left;
+        padding: 12px;
+        font-size: 14px;
+        svg {
+            width: 24px;
+            height: 24px;
+            fill: currentColor;
         }
+    }
 }
 
 #venue-dropdown {
